@@ -2,7 +2,7 @@
  * 
  * TOM - To One Matching Compiler
  * 
- * Copyright (c) 2000-2009, INRIA
+ * Copyright (c) 2000-2010, INPL, INRIA
  * Nancy, France.
  * 
  * This program is free software; you can redistribute it and/or modify
@@ -179,7 +179,7 @@ public class TomParserPlugin extends TomGenericPlugin {
       }
       // verbose
       getLogger().log(Level.INFO, TomMessage.tomParsingPhase.getMessage(),
-                      new Integer((int)(System.currentTimeMillis()-startChrono)) );
+                      Integer.valueOf((int)(System.currentTimeMillis()-startChrono)) );
     } catch (TokenStreamException e) {
       getLogger().log(new PlatformLogRecord(Level.SEVERE,
                       TomMessage.tokenStreamException,
